# Machine_Learning_FIAP

./: .gitignore  INSTRUCTIONS_SECURITY.md  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  security-scheduled.yml  security-weekly.yml
docs/: guardrails.md  repo_architecture.drawio
notebooks/: 01_eda.ipynb
src/: config.py
src/api/: app.py  middlewares.py
src/data/: __init__.py  preprocess.py  splitter.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  baseline.py
tech-challenge-fase01/: ARQUIVO_INDEX.md  ARQUIVO_LIST.md  CHECKLIST.md  FINAL_SUMMARY.md  INSTRUCTIONS_SECURITY.md  Makefile  README.md  SETUP_COMPLETE.md  VISUAL_STRUCTURE.md  requirements.txt  setup.cfg
tech-challenge-fase01/.github/workflows/: security.yml
tech-challenge-fase01/docs/: ml_canvas.md  model_card.md  monitoring_plan.md
tech-challenge-fase01/notebooks/: 02_modeling.ipynb
tech-challenge-fase01/scripts/: run_api.sh  train_pipeline.py
tech-challenge-fase01/src/: __init__.py
tech-challenge-fase01/src/api/: schemas.py
tech-challenge-fase01/src/models/: mlp.py  trainer.py
tech-challenge-fase01/src/utils/: __init__.py  logger.py  metrics.py
tech-challenge-fase01/tests/: test_api.py  test_schema.py
tests/: __init__.py  test_api.py  test_smoke.py
