[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-challenge-fase01"
version = "0.1.0"
description = "ML Pipeline para previsão de churn com MLP PyTorch"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tech Challenge", email = "tech@challenge.com"}
]

dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mlflow>=2.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.22.0",
    "httpx>=0.24.0",
    "ruff>=0.12.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "semgrep>=1.35.0",
    "pip-audit>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --maxfail=1 --disable-warnings --cov=src --cov-report=xml:coverage.xml"

[tool.black]
line-length = 100
target-version = ['py310']
